--- a/index.html
+++ b/index.html
@@ -7,13 +7,26 @@
       content="width=device-width, initial-scale=1.0"
     />
     <link
+      rel="preconnect"
+      href="https://fonts.googleapis.com"
+    />
+    <link
+      rel="preconnect"
+      href="https://fonts.gstatic.com"
+      crossorigin
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
+    <link
       rel="stylesheet"
       href="styles/styles.css"
     />
     <title>Landing page</title>
   </head>
   <body>
-    <header>
+    <header class="header">
       <div class="navbar">
         <div class="logo">Header logo</div>
         <ul class="links">
