--- a/index.html
+++ b/index.html
@@ -27,29 +27,32 @@
   </head>
   <body>
     <header class="header">
-      <div class="navbar">
-        <div class="logo">Header logo</div>
-        <ul class="links">
-          <li>header link one</li>
-          <li>header link two</li>
-          <li>header link three</li>
-        </ul>
-      </div>
-      <div class="hero-wrapper">
-        <div class="hero-content">
-          <h1>This website is awesome</h1>
-          <p>
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quisquam
-            quasi laborum eligendi dicta deleniti recusandae error, sunt,
-            perferendis necessitatibus odio quia inventore ipsa aliquid. Hic.
-          </p>
-          <button>Sign up</button>
+      <div class="container">
+        <div class="navbar">
+          <div class="logo">Header logo</div>
+          <ul class="links">
+            <li><a href="#">header link one</a></li>
+            <li><a href="#">header link two</a></li>
+            <li><a href="#">header link three</a></li>
+          </ul>
         </div>
-        <div class="hero-img-wrapper">
-          <img
-            src=""
-            alt=""
-          />
+
+        <div class="hero-wrapper">
+          <div class="hero-content">
+            <h1>This website is awesome</h1>
+            <p>
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quisquam
+              quasi laborum eligendi dicta deleniti recusandae error, sunt,
+              perferendis necessitatibus odio quia inventore ipsa aliquid. Hic.
+            </p>
+            <button class="btn signup-btn">Sign up</button>
+          </div>
+          <div class="hero-img-wrapper">
+            <img
+              src="images/children.jpg"
+              alt="Five children smiling and doing the peace sign while looking at the camera"
+            />
+          </div>
         </div>
       </div>
     </header>
@@ -89,7 +92,7 @@
           <p>
             Sign up for our products by clicking that button right over there!
           </p>
-          <button>Sign up</button>
+          <button class="btn">Sign up</button>
         </div>
       </section>
     </main>
