feat: build the info section

--- a/index.html
+++ b/index.html
@@ -58,25 +58,45 @@
     </header>
     <main>
       <section class="info-section">
-        <h2>Some random information</h2>
-        <ul>
-          <li>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-            Distinctio, pariatur.
-          </li>
-          <li>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-            Distinctio, pariatur.
-          </li>
-          <li>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-            Distinctio, pariatur.
-          </li>
-          <li>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-            Distinctio, pariatur.
-          </li>
-        </ul>
+        <div class="container-small">
+          <div class="info-wrapper">
+            <h2>Some random information</h2>
+            <ul>
+              <li>
+                <img
+                  src="images/christmas.png"
+                  alt="drawing of Santa Claus holding presents on his back"
+                />
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                Distinctio, pariatur.
+              </li>
+              <li>
+                <img
+                  src="images/gift.png"
+                  alt="drawing of lovers exchanging a gift"
+                />
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                Distinctio, pariatur.
+              </li>
+              <li>
+                <img
+                  src="images/hands_shaking.png"
+                  alt="drawing of two people shaking hands"
+                />
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                Distinctio, pariatur.
+              </li>
+              <li>
+                <img
+                  src="images/books.png"
+                  alt="drawing of a man looking away and holding books"
+                />
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                Distinctio, pariatur.
+              </li>
+            </ul>
+          </div>
+        </div>
       </section>
       <section class="quote-section">
         <h2>
