feat: build the quote section

--- a/index.html
+++ b/index.html
@@ -99,12 +99,14 @@
         </div>
       </section>
       <section class="quote-section">
-        <h2>
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorum quae
-          totam consequuntur iusto quaerat cumque dolor dicta magnam atque
-          possimus?
-        </h2>
-        <p>Thor, God of Thunder</p>
+        <div class="container-small">
+          <h2>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorum
+            quae totam consequuntur iusto quaerat cumque dolor dicta magnam
+            atque possimus?
+          </h2>
+          <p>-Thor, God of Thunder</p>
+        </div>
       </section>
       <section class="signup-section">
         <div>
