--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
               quasi laborum eligendi dicta deleniti recusandae error, sunt,
               perferendis necessitatibus odio quia inventore ipsa aliquid. Hic.
             </p>
-            <button class="btn signup-btn">Sign up</button>
+            <button class="btn">Sign up</button>
           </div>
           <div class="hero-img-wrapper">
             <img
@@ -109,12 +109,19 @@
         </div>
       </section>
       <section class="signup-section">
-        <div>
-          <h3>Call to action! It's time!</h3>
-          <p>
-            Sign up for our products by clicking that button right over there!
-          </p>
-          <button class="btn">Sign up</button>
+        <div class="container">
+          <div class="cta-wrapper">
+            <div class="container-small">
+              <div>
+                <h3>Call to action! It's time!</h3>
+                <p class="cta-indication">
+                  Sign up for our products by clicking that button right over
+                  there!
+                </p>
+              </div>
+              <button class="btn btn-white">Sign up</button>
+            </div>
+          </div>
         </div>
       </section>
     </main>
